# Aerogel-lightweight-game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.py  log  options.hpp
Docs/: APIs.md  Build.md  Logs.md
Engine/: engine.cpp
Engine/Renderer/: renderer.hpp  window.hpp
Map/: map_generator.cpp  map_generator.hpp
Notes/: Build structure  File structure  Notes.txt  buildStructure.yml  fileStructure.py  fileStructure.yml
Program/: main.hpp  save_and_load.hpp
